    - Bluetooth: hci_sock: Correctly bounds check and pad HCI_MON_NEW_INDEX name
    - xfrm6: fix inet6_dev refcount underflow problem

  [ Salvatore Bonaccorso ]
  * Bump ABI to 27
  * [rt] Refresh "net: Properly annotate the try-lock for the seqlock"
    Adapt to changes from upstream a8dd21118b0f ("seqlock: Prefix internal
    seqcount_t-only macros with a "do_"") in 5.10.198.

 -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 27 Oct 2023 06:13:10 +0200

linux (5.10.197-1) bullseye; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.10.192
    - [arm64] mmc: sdhci-f-sdh30: Replace with sdhci_pltfm
    - macsec: Fix traffic counters/statistics
    - macsec: use DEV_STATS_INC()
    - net/mlx5: Refactor init clock function
    - net/mlx5: Move all internal timer metadata into a dedicated struct
    - net/mlx5: Skip clock update work when device is in error state
    - drm/radeon: Fix integer overflow in radeon_cs_parser_init
    - ALSA: emu10k1: roll up loops in DSP setup code for Audigy
    - [x86] ASoC: Intel: sof_sdw: add quirk for MTL RVP
    - [x86] ASoC: Intel: sof_sdw: add quirk for LNL RVP
    - [armhf] dts: imx6dl: prtrvt, prtvt7, prti6q, prtwd2: fix USB related
      warnings
    - [x86] ASoC: Intel: sof_sdw: Add support for Rex soundwire
    - iopoll: Call cpu_relax() in busy loops
    - quota: Properly disable quotas when add_dquot_ref() fails
    - quota: fix warning in dqgrab()
    - dma-remap: use kvmalloc_array/kvfree for larger dma memory remap
    - drm/amdgpu: install stub fence into potential unused fence pointers
    - HID: add quirk for 03f0:464a HP Elite Presenter Mouse
    - RDMA/mlx5: Return the firmware result upon destroying QP/RQ
    - ovl: check type and offset of struct vfsmount in ovl_entry
    - udf: Fix uninitialized array access for some pathnames
    - fs: jfs: Fix UBSAN: array-index-out-of-bounds in dbAllocDmapLev
    - FS: JFS: Fix null-ptr-deref Read in txBegin