@@ -44,11 +44,9 @@ Signed-off-by: Catalin Marinas <catalin.marinas@arm.com>
  5 files changed, 395 insertions(+)
  create mode 100644 arch/arm64/kernel/compat_alignment.c
 
-diff --git a/arch/arm64/Kconfig b/arch/arm64/Kconfig
-index a6b5b7ef40ae..1a52547bf296 100644
 --- a/arch/arm64/Kconfig
 +++ b/arch/arm64/Kconfig
-@@ -1283,6 +1283,9 @@ config THUMB2_COMPAT_VDSO
+@@ -1328,6 +1328,9 @@ config THUMB2_COMPAT_VDSO
  	  Compile the compat vDSO with '-mthumb -fomit-frame-pointer' if y,
  	  otherwise with '-marm'.
  
@@ -58,20 +56,16 @@ index a6b5b7ef40ae..1a52547bf296 100644
  menuconfig ARMV8_DEPRECATED
  	bool "Emulate deprecated/obsolete ARMv8 instructions"
  	depends on SYSCTL
-diff --git a/arch/arm64/include/asm/exception.h b/arch/arm64/include/asm/exception.h
-index 0756191f44f6..cbbad396a8b8 100644
 --- a/arch/arm64/include/asm/exception.h
 +++ b/arch/arm64/include/asm/exception.h
-@@ -50,6 +50,7 @@ void do_sysinstr(unsigned int esr, struct pt_regs *regs);
+@@ -47,6 +47,7 @@ void do_el0_sys(unsigned long esr, struc
  void do_sp_pc_abort(unsigned long addr, unsigned int esr, struct pt_regs *regs);
  void bad_el0_sync(struct pt_regs *regs, int reason, unsigned int esr);
- void do_cp15instr(unsigned int esr, struct pt_regs *regs);
+ void do_el0_cp15(unsigned long esr, struct pt_regs *regs);
 +int do_compat_alignment_fixup(unsigned long addr, struct pt_regs *regs);
  void do_el0_svc(struct pt_regs *regs);
  void do_el0_svc_compat(struct pt_regs *regs);
- void do_ptrauth_fault(struct pt_regs *regs, unsigned int esr);
-diff --git a/arch/arm64/kernel/Makefile b/arch/arm64/kernel/Makefile
-index bbaf0bc4ad60..314316d5c4e4 100644
+ void do_el0_fpac(struct pt_regs *regs, unsigned long esr);
 --- a/arch/arm64/kernel/Makefile
 +++ b/arch/arm64/kernel/Makefile
 @@ -28,6 +28,7 @@ $(obj)/%.stub.o: $(obj)/%.o FORCE
@@ -82,9 +76,6 @@ index bbaf0bc4ad60..314316d5c4e4 100644
  obj-$(CONFIG_KUSER_HELPERS)		+= kuser32.o
  obj-$(CONFIG_FUNCTION_TRACER)		+= ftrace.o entry-ftrace.o
  obj-$(CONFIG_MODULES)			+= module.o
-diff --git a/arch/arm64/kernel/compat_alignment.c b/arch/arm64/kernel/compat_alignment.c
-new file mode 100644
-index 000000000000..5edec2f49ec9
 --- /dev/null
 +++ b/arch/arm64/kernel/compat_alignment.c
 @@ -0,0 +1,387 @@
@@ -475,11 +466,9 @@ index 000000000000..5edec2f49ec9
 +
 +	return 0;
 +}
-diff --git a/arch/arm64/mm/fault.c b/arch/arm64/mm/fault.c
-index 795d224f184f..ab3a3fb92ebf 100644
 --- a/arch/arm64/mm/fault.c
 +++ b/arch/arm64/mm/fault.c
-@@ -610,6 +610,9 @@ static int __kprobes do_translation_fault(unsigned long addr,
+@@ -610,6 +610,9 @@ static int __kprobes do_translation_faul
  static int do_alignment_fault(unsigned long addr, unsigned int esr,
  			      struct pt_regs *regs)
  {
