@@ -381,6 +381,7 @@ linux (5.10.199-1) UNRELEASED; urgency=medium
   * [rt] Refresh "net: Properly annotate the try-lock for the seqlock"
     Adapt to changes from upstream a8dd21118b0f ("seqlock: Prefix internal
     seqcount_t-only macros with a "do_"") in 5.10.198.
+  * Refresh "arm64: compat: Implement misalignment fixups for multiword loads"
 
  -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 27 Oct 2023 06:13:10 +0200
 
